# connectome

./: .env.example  .gitignore  LICENSE  README.md  README_AI.md  README_ALT.md  architecture_implementation_overview.md  components.md  config.py  create_pid_support.py  debug_compression_real_time.py  integration_documentation.md  main.py  mock_adapter_server.py  pyproject.toml  pytest.ini  requirements.txt  scaffolding_server.py  setup.py  test_compression_engine_integration.py  test_event_replay.py  test_full_timeline_integration.py  test_tool_validation.py  tui_inspector
activity/: __init__.py  client.py  listener.py  sender.py
agent/: __init__.py  agent.py  prompt_manager.py
config/: README.md  decider.yaml.example
context/: __init__.py  context_manager.py  formatter.py
docs/: components.md  connectome_update.md  ontology.md  personal_notes.md  storage_architecture.md  structure_update.md  veil_reqs.md
elements/: README.md  __init__.py  component_registry.py  prefabs.py  space_registry.py
environments/: README.md  __init__.py  base.py  custom_environment_template.py  file.py  manager.py  message_service.py  messaging.py  system.py  web.py
host/: __init__.py  cli_inspect.py  config.py  event_loop.py  inspect.py  main.py  observability.py  shutdown.py  status.py
interface/: __init__.py  context_manager.py  layer.py  prompt_manager.py
llm/: __init__.py  anthropic_provider.py  litellm_provider.py  openai_provider.py  provider_factory.py  provider_interface.py  scaffolding_formatter.py  scaffolding_observer.py  scaffolding_provider.py
rendering/: api.py  (+3 more)
(+223 files in other folders)
